compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_complex_real_literal-5.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "a := 2.47032822920623272e-324"

---
database:
stmt:
Idx::<Stmt>(0) (0..29): Assign(Assign { lhs: Idx::<Expr>(0), op: Spanned(None, 2..4), rhs: Idx::<Expr>(1) })

expr:
Idx::<Expr>(0) (0..1): Name(Name(UseId(DefId(0), 0)))
Idx::<Expr>(1) (5..29): Literal(Real(0.0))

ty:

root stmts:
[Idx::<Stmt>(0)]
symtab:
DefId(0): (0..1, Symbol { name: "a", kind: Undeclared, is_pervasive: false, def_id: DefId(0), next_use: 1 })
UseId(DefId(0), 0): 0..1

