compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_complex_real_literal-7.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "a := 3.237883913302901289588352412501532174863037669423108059901297049552301970670676565786835742587799557860615776559838283435514391084153169252689190564396459577394618038928365305143463955100356696665629202017331344031730044369360205258345803431471660032699580731300954848363975548690010751530018881758184174569652173110473696022749934638425380623369774736560008997404060967498028389191878963968575439222206416981462690113342524002724385941651051293552601421155333430225237291523843322331326138431477823591142408800030775170625915670728657003151953664260769822494937951845801530895238439819708403389937873241463484205608000027270531106827387907791444918534771598750162812548862768493201518991668028251730299953143924168545708663913273994694463908672332763671875E-319"

---
database:
stmt:
Idx::<Stmt>(0) (0..768): Assign(Assign { lhs: Idx::<Expr>(0), op: None, rhs: Idx::<Expr>(1) })

expr:
Idx::<Expr>(0) (0..2): Name(Name(UseId(DefId(0), 0)))
Idx::<Expr>(1) (5..768): Literal(Real(0.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000323786))

ty:

root stmts:
[Idx::<Stmt>(0)]
symtab:
DefId(0): (0..1, Symbol { name: "a", kind: Undeclared, is_pervasive: false, def_id: DefId(0), next_use: 1 })
UseId(DefId(0), 0): 0..1

